# glean

./: .gitignore  Cargo.toml  build.rs
docs/: glean_api_doc.md  patching-tree-sitter-angular.md  porting-tree-sitter-angular.md
fixtures/: sample.angular.html  sample.css  sample.html  sample.js  sample.json  sample.py  sample.rs  sample.ts  sample.tsx  sample.yaml
patches/tree-sitter-angular/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patches/tree-sitter-angular/bindings/rust/: lib.rs
poc/: poc_astgrep.rs
queries/puppet/: aerial.scm
queries/tsx/: aerial.scm
queries/typescript/: aerial.scm
queries/typst/: aerial.scm
src/: aerial.rs  angular.rs  astgrep.rs  constants.rs  database.rs  file_scanner.rs  main.rs  procedure.rs  procedures.rs  types.rs
src/aerial/: outline.rs  queries.rs
src/aerial/outline/: arl_css.rs  arl_html.rs  arl_javascript.rs  arl_json.rs  arl_python.rs  arl_rust.rs  arl_tsx.rs  arl_typescript.rs  arl_yaml.rs  registry.rs
src/astgrep/: matching.rs  morelangs.rs
src/astgrep/matching/: ast_angular.rs  ast_css.rs  ast_html.rs  ast_javascript.rs  ast_json.rs  ast_python.rs  ast_rust.rs  ast_tsx.rs  ast_typescript.rs  ast_yaml.rs  registry.rs
src/astgrep/morelangs/: angular.rs
src/database/: repository_repo.rs  tables.rs
src/procedure/: add_repo.rs  get_file_content.rs  get_file_outline.rs  search_file.rs  search_pattern.rs
src/procedures/: remove_repo.rs  repo_stats.rs
