[package]
name = "glean"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.9"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
