[package]
name = "glean"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
ast-grep-core = "0.43.0"
ast-grep-language = "0.43.0"
tree-sitter = "0.26.9"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-language = "0.1.7"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[build-dependencies]
cc = "1"
