[package]
name = "glean"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ast-grep-core = "0.43.0"
ast-grep-language = "0.43.0"
ignore = "0.4.25"
jsonrpsee = { version = "0.26.0", features = ["server"] }
redb = "4.1.0"
skim = "4.7.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
tree-sitter = "0.26.9"
tree-sitter-angular = "0.9.2"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-language = "0.1.7"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[patch.crates-io]
tree-sitter-angular = { git = "https://github.com/memorileak/tree-sitter-angular.git" }
